write url in cors to test if error is caused by env